# substrate-erc20.rf

./: Cargo.toml  README.md  README.template.md  Reframe.toml  lib.rs
